sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:2: error: Missing closing brace `}' assumed here
def cocktailSort2() {
^AlgCocktailSort2:13: error: Missing closing brace `}' assumed here
}
^